# pypam

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Makefile  README.md  __main__.py  acoustic_survey.py  justfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
docs/: acufile.md  api_overview.md  asa.md  available_features.md  data_summary_example.csv  data_summary_explained.csv  dataset.md  index.md  install.md  plots.md  quickstart.md  requirements.txt  signal.md  utils.md
docs/source/: about.rst  acoustic_file.rst  acoustic_survey.rst  available_features.rst  conf.py  data_structures.rst  dataset.rst  examples.rst  index.rst  install.rst  introduction.rst  plots.rst  quickstart.rst  reference.rst  references.rst  sg_execution_times.rst  utils.rst
examples/: PCAD4Cod_Belwind.py  README.md  README.rst  amuc.py  bk_data_cleaning.py  clean_data.py  corona_measurements.py  create_acoustic_survey.py  create_acoustic_survey_example.py  create_dataset.py  data_summary_example.csv  detect_events.py  events_detection.py  features_calc.py  features_test.py  hybrid_millidecade_bands.py  manta.py  millidecade_bands.py  nn_database.py  nn_tests.py  piling_survey.py  plot_hybrid_millidecade_bands.py  plot_signal_oriented.py  sepam_covid19.py  shipwrecks.py  signal_oriented.py  st_data_cleaning.py  st_vs_cpod.py  test.py
pypam/: __init__.py  _event.py  acoustic_chunk.py  acoustic_file.py  acoustic_indices.py  acoustic_survey.py  dataset.py  detection.py  detections.py  event.py  geolocation.py  impulse_detector.py  loud_event_detector.py  nmf.py  piling_detector.py  plots.py  signal.py  units.py  utils.py
pypam/acousticsurvey/: acoustic_file.py  acoustic_survey.py  geolocation.py
pypam/events/piling/: event.py  event_detector.py
pypam/examples/: PCAD4Cod_Belwind.py  piling_survey.py  sepam_covid19.py
tests/: __init__.py  test_acoustic_file.py  test_acoustic_indices.py  test_acoustic_survey.py  test_chunks.py  test_dataset.py  test_impulsive_metrics.py  test_millidecade_bands.py  test_plots.py  test_signal.py  test_utils.py
tests/__snapshots__/: test_millidecade_bands.ambr
tests/test_data/: calibration_data.xlsx  data_summary.csv  mdec_bands_test.csv  mdec_power_test.csv  spectra.csv
tests/test_data/flac_data/: 67416073.210610033655.flac  67416073.210610034155.flac  67416073.210610034655.flac
tests/test_data/impulsive_data/: madsen_digitized_signal.csv  madsen_digitized_signal_2.csv  pileDriving_results_benchmark.mat  pileDriving_results_pypam.csv  pile_driving_decidecade_benchmark.csv
