[tool.poetry]
name = "lifewatch-pypam"
version = "0.3.2"
description = 'Facilitate acoustic processing from underwater acoustic recorders'
authors = ["Clea Parcerisas <cleap@vliz.be>"]
readme = "README.md"
repository = "https://github.com/lifewatch/pypam.git"
packages = [{include = "pypam"}]
license = "GPL-3.0-or-later"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
seaborn = "0.13.0"
soundfile = "^0.12.1"
tqdm = "^4.65.0"
numba = "^0.57.0"
noisereduce = "^2.0.1"
scikit-learn = "^1.2.2"
python-dateutil = "^2.8.2"
xarray = "2023.8.0"
pyhydrophone = "^0.1.7"
netcdf4 = "^1.6.4"
syrupy = "^4.0.4"
scikit-maad = "^1.4.3"
openpyxl = "^3.1.5"
pvlib = {version = "^0.11.0", optional = true}
dask = {version = "^2023.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
isort = "^5.12.0"
black = ">=23.3,<25.0"

[tool.poetry.group.test.dependencies]
pyyaml = "^6.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "6.1.2"
numpydoc = "^1.5.0"
sphinx-rtd-theme = "^1.2.2"
sphinx-gallery = "^0.13.0"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
