[tool.poetry]
name = "lifewatch-pypam"
version = "0.3.2"
description = 'Facilitate acoustic processing from underwater acoustic recorders'
authors = ["Clea Parcerisas <cleap@vliz.be>"]
readme = "README.md"
repository = "https://github.com/lifewatch/pypam.git"
packages = [{include = "pypam"}]
license = "GPL-3.0-or-later"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = ">=3.9, <3.13.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
seaborn = "0.13.0"
soundfile = "^0.12.1"
tqdm = "^4.65.0"
numba = ">=0.58"
noisereduce = "^2.0.1"
scikit-learn = "^1.2.2"
python-dateutil = "^2.8.2"
xarray = "2023.8.0"
pyhydrophone = "==0.2.0"
netcdf4 = "^1.6.4"
syrupy = "^4.0.4"
scikit-maad = "^1.4.3"
openpyxl = "^3.1.5"
pvlib = {version = "^0.11.0", optional = true}
dask = {version = "^2023.0.0", optional = true}
numpy = "<2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "0.2.2"
pre-commit = "^3.3.1"
isort = "^5.12.0"
black = ">=23.3,<25.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pyyaml = "^6.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
m2r = ">=0.2"
docutils = ">=0.20"
ipykernel = "^6.29.5"
numpydoc = "^1.8.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
pandoc = "^2.4"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocstrings-python = "^1.16.10"
mkdocs-gallery = "^0.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
