[metadata]
name = lifewatch-pypam
version = 0.1.7
author = Clea Parcerisas
author_email = clea.parcerisas@vliz.be
description = Facilitate acoustic processing from underwater acoustic recorders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifewatch/pypam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = pypam